# ambiguity

./: .anvilignore  .anvilrc  .clinerules  .cursorrules  .dockerignore  .editorconfig  .gitignore  .npmignore  .windsurfrules  AGENTS.md  AUTHORS.md  CHANGELOG.md  CHAP_ANCHOR.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  MANIFEST.yaml  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  memory.md  opencode.json  pyproject.toml
.clinerules/: rules.md
.cursor/rules/: project.mdc  python.mdc  typescript.mdc
.gemini/: GEMINI.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: python.instructions.md  typescript.instructions.md
.github/workflows/: ambiguity-gate.yml
.grok/: GROK.md
.windsurf/rules/: rules.md
designs/: 2026-05-30-ambiguity-analyzer.design.md
docs/: AGENTS.md  CHANGELOG.md  QUICKSTART.md  TECHNICAL_DIRECTION_PIPELINE.md  ambiguity-framework.md  memory.md
plans/: aps-rules.md  index.aps.md
plans/modules/: 01-core.aps.md
src/ambiguity/: __init__.py  __main__.py  advisory.py  analyzer.py  async_hooks.py  (+25 more)
tests/: test_analyze.py  test_async_hooks.py  test_chunking.py  test_clarify.py  test_cli.py  test_compare.py  test_constraints.py  test_containers_integrity.py  test_embeddings.py  test_extensions.py  test_hooks.py  test_profile.py  test_review.py  test_rhetoric.py  test_server.py  test_technical.py  test_translate.py
ts/: biome.json  package-lock.json  package.json  tsconfig.json
(+28 files in other folders)
