[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambiguity"
version = "0.1.0"
description = "Deterministic prompt analysis — pre-flight linter for human-to-model translation"
requires-python = ">=3.9"
keywords = ["prompt-engineering", "prompt-linting", "llm-guardrails", "deterministic-analysis", "pre-flight", "entropy-scoring", "ambiguity", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]", "pydantic"]
dev = ["pytest", "ruff"]
hooks = ["anthropic", "openai"]
all = ["fastapi", "uvicorn[standard]", "pydantic", "anthropic", "openai", "google-genai", "requests"]

[project.scripts]
ambiguity = "ambiguity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
